# warp-pipes

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  contributing.html  flake.nix  getting_started.html  introduction.html  pipes.html  print.html  pyproject.toml  searchindex.js  searchindex.json  update_v1.qmd  warp-pipes.html
.github/workflows/: docs.yaml  unit-test.yml
examples/: custom_search_engine.py  faiss_index.py  faiss_search_engine.py  index.py  passages.py  passages_and_collate.py
sandbox/: core_refactor.py  interoperability.qmd  iterable_ds_comparison.py  iterable_ds_timeit.py  pipe_investigation.py
tests/: test_warp_pipes.py
tests/core/: test_fingerprintable.py  test_pipe.py
tests/pipes/: test_all_pipes.py  test_index.py  test_nesting.py  test_passages.py  test_pipelines.py  test_predict.py
tests/search/: test_dense.py  test_group_lookup.py  test_search_result.py
tests/support/: test_caching.py  test_json_struct.py  test_nesting.py  test_shapes.py
tests/support/search_engines/: test_dense.py  test_dense_search_engine.py  test_group_lookup.py  test_search_result.py
tests/utils/: dummy_model.py
user_guide/: books.toml
user_guide/src/: SUMMARY.md  basic_pipes.md  getting_started.md  introduction.md  pipes.md  warp-pipes.md
user_guide/src/examples/: basics.py  collate_documents.py  generate_passages.py  tokenize_in_parallel.py
warp_pipes/: __init__.py
warp_pipes/core/: condition.py  fingerprintable.py  pipe.py
warp_pipes/pipes/: __init__.py  basics.py  collate.py  index.py  nesting.py  passages.py  pipelines.py  pprint.py  predict.py  tokenizer.py
warp_pipes/search/: __init__.py  auto.py  base.py  config.py  dense.py  elasticsearch.py  group_lookup.py  search.py  search_result.py  topk.py
warp_pipes/search/vector_base/: base.py  faiss.py  torch.py
warp_pipes/search/vector_base/utils/: faiss.py
warp_pipes/support/: caching.py  datasets_utils.py  datastruct.py  elasticsearch.py  fingerprint.py  functional.py  json_struct.py  nesting.py  pretty.py  shapes.py  tensor_handler.py  tensorstore_callback.py
warp_pipes/support/search_engines/: __init__.py  auto.py  base.py  dense.py  document_lookup.py  elasticsearch.py  faiss.py  group_lookup.py  multi_faiss.py  search_config.py  search_result.py  topk.py
warp_pipes/support/search_engines/vector_base/: __init__.py  auto.py  base.py  faiss.py  torch.py
warp_pipes/support/search_engines/vector_base/utils/: faiss.py
