[tool.poetry]
name = "warp-pipes"
version = "0.1.2"
description = "Simple finperprintable and parallelizable pipelines for data preprocessing."
authors = ["Valentin Liévin <valentin.lievin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8, <3.11"
numpy = "^1.23.4"
torch = ">=1.12, !=1.13.0" # 1.13.0 throws error as it attempts to install `nvidia-cublas-cu11 `
datasets = "~2.5"
omegaconf = "^2.2.3"
rich = "^12.6.0"
loguru = "^0.6.0"
transformers = "^4.23.1"
jsondiff = "^2.0.0"
singledispatchmethod = "^1.0"
stackprinter = "^0.2.9"
pytorch-lightning = "^1.7.7"
tensorstore = {version = "^0.1.27", allow-prereleases = true}
pydantic = "^1.10.2"
hydra-core = "^1.2.0"
faiss-cpu = "^1.6.5"
elasticsearch = "^7"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}
ipykernel = "^6.16.0"
pytest = "^7.2.2"
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
